
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int SID_IDENTIFIER_AUTHORITY ;
typedef int * PSID ;


 scalar_t__ AllocateAndInitializeSid (int *,int,int ,int ,int ,int ,int ,int ,int ,int ,int **) ;
 scalar_t__ FALSE ;
 int GetLastError () ;
 int SECURITY_LOCAL_SYSTEM_RID ;
 int SECURITY_NT_AUTHORITY ;
 int printf (char*,int) ;

PSID GetLocalSystemSID()
{
    PSID psid = ((void*)0);
    SID_IDENTIFIER_AUTHORITY sidAuth = SECURITY_NT_AUTHORITY;


    if (AllocateAndInitializeSid(&sidAuth, 1, SECURITY_LOCAL_SYSTEM_RID, 0, 0, 0, 0, 0, 0, 0, &psid) == FALSE)
    {
        printf("\n[-] AllocateAndInitializeSid failed %d\n", GetLastError());
        return ((void*)0);
    }

    return psid;
}
