; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_45496.c_GetLocalSystemSID.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_45496.c_GetLocalSystemSID.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SECURITY_NT_AUTHORITY = common dso_local global i32 0, align 4
@SECURITY_LOCAL_SYSTEM_RID = common dso_local global i32 0, align 4
@FALSE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [41 x i8] c"\0A[-] AllocateAndInitializeSid failed %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @GetLocalSystemSID() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* null, i32** %2, align 8
  %4 = load i32, i32* @SECURITY_NT_AUTHORITY, align 4
  store i32 %4, i32* %3, align 4
  %5 = load i32, i32* @SECURITY_LOCAL_SYSTEM_RID, align 4
  %6 = call i64 @AllocateAndInitializeSid(i32* %3, i32 1, i32 %5, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32** %2)
  %7 = load i64, i64* @FALSE, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %12

9:                                                ; preds = %0
  %10 = call i32 (...) @GetLastError()
  %11 = call i32 @printf(i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0), i32 %10)
  store i32* null, i32** %1, align 8
  br label %14

12:                                               ; preds = %0
  %13 = load i32*, i32** %2, align 8
  store i32* %13, i32** %1, align 8
  br label %14

14:                                               ; preds = %12, %9
  %15 = load i32*, i32** %1, align 8
  ret i32* %15
}

declare dso_local i64 @AllocateAndInitializeSid(i32*, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32**) #1

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i32 @GetLastError(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
